# worldengine

./: .gitignore  CMakeLists.txt  TAGS  main.cpp  pch.h  settings.ini
include/: TAGS  camera.hpp  contextglsdl.hpp  mathhelpers.h  mathhelpers.hpp  meshgl.hpp  objparser.hpp  settingsmixin.hpp  shader.hpp
shaders/: fragment.glsl  vertex.glsl
src/: camera.cpp  contextglsdl.cpp  meshgl.cpp  objparser.cpp  settingsmixin.cpp  shader.cpp
testing/: core_tests.hpp  objparser_tests.hpp
